# dbt-bigquery

./: .gitignore  README.md  profiles.yml  pyproject.toml
datawarehouse/: .sqlfluff  dbt_project.yml
datawarehouse/macros/: generate_schema_name.sql
datawarehouse/models/marts/vendas/: vendas_por_categoria.sql  vendas_por_datata.sql  vendas_por_estado.sql  vendas_realizadas_clientes.sql
datawarehouse/models/staging/: _ecommerce_sources.yml  stg_customers.sql
datawarehouse/models/staging/e_commerce/: _ecommerce_sources.yml  stg_kpuu_shop__clientes.sql  stg_kpuu_shop__estoques.sql  stg_kpuu_shop__pagamentos.sql  stg_kpuu_shop__produtos.sql  stg_kpuu_shop__vendas.sql
datawarehouse/seeds/: clientes.csv  estoque.csv  pagamentos.csv  produtos.csv  vendas.csv
