[project]
name = "dbtcore-bigquery"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Marques",email = "seuemail@dominio.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core (>=1.10.5,<2.0.0)",
    "dbt-bigquery (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
sqlfluff = "^3.4.2"
